# HDmap

./: README.md  requirements.txt  result.xml
downsample/: voxel_grid.cpp
extract lines/: CMakeLists.txt  extract_indices.cpp  map004_ground.pcd
linear fit/: random_sample_consensus.cpp
linear-curvefitting/: CMakeLists.txt  linear.cpp
remove/: CMakeLists.txt  pcd_remove.cpp
visualize/: cloud_viewer.cpp
